--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ username: Dohae Lee
 user_title: Lorem Ipsum - FrontEnd
 email: dlehgo1414@gmail.com
 twitter_username: loremipsum
+instagram_username: dlehgo14
 github_username:  dlehgo14
 gplus_username:  loremipsum
 linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
