--- a/_config.yml
+++ b/_config.yml
@@ -37,26 +37,26 @@ links:
     - title: my posts
       url: /posts
       key_trigger: 2
-    - title: series
-      url: /series
-      key_trigger: 3
-    - title: tags
-      url: /tags
-      key_trigger: 4
-    - title: about me
-      url: /about
-      key_trigger: 5
-  section_2:
-    - title: github
-      url: http://www.github.com/victorvoid
-      new_tab: true
-      key_trigger: g
-    - title: twitter
-      url: http://www.twitter.com/victorvoid
-      key_trigger: t
-    - title: search
-      url: ""
-      key_trigger: s #WARNING: search only works with "s"
+    # - title: series
+      # url: /series
+      # key_trigger: 3
+    # - title: tags
+      # url: /tags
+      # key_trigger: 4
+    # - title: about me
+      # url: /about
+      # key_trigger: 5
+  # section_2:
+    # - title: github
+      # url: http://www.github.com/victorvoid
+      # new_tab: true
+      # key_trigger: g
+    # - title: twitter
+      # url: http://www.twitter.com/victorvoid
+      # key_trigger: t
+    # - title: search
+      # url: ""
+      # key_trigger: s #WARNING: search only works with "s"
 
 # projects in header index
 projects:
