--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: JJAPSAE KING
 description: "Graphics studying..."
 baseurl: "" # for test: remove string '/space-jekyll-template' to ''
-url: "https://dlehgo.github.io" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
+url: "https://dlehgo14.github.io" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
 
 # User settings
 username: Dohae Lee
