--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ instagram_username: dlehgo14
 github_username:  dlehgo14
 gplus_username:  loremipsum
 linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
-disqus_username: loremipsum
+disqus_username: dlehgo14
 profile_picture: https://avatars3.githubusercontent.com/u/38254374?s=460&v=4
 
 # Build settings
