highlight align to center

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: dohae blog
 description: "Graphics studying..."
-baseurl: "" # for test: remove string '/space-jekyll-template' to ''
+baseurl: "/space-jekyll-template" # for test: remove string '/space-jekyll-template' to ''
 url: "https://dlehgo14.github.io" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
 
 # User settings
